git-svn-id: http://chianti.ucsd.edu/svn@22756 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -587,7 +587,7 @@ nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeToolTip=
 nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeWidth=160.0
 nodeAppearanceCalculator.PanGIA\ Module\ Style.nodeLabelCalculator=Module Style-Node Label-Passthrough Mapper
 nodeAppearanceCalculator.PanGIA\ Module\ Style.nodeSizeLocked=false
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderColor=0,0,0
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderColor=0,102,102
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderOpacity=255
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics1=cytoscape.visual.customgraphic.NullCustomGraphics
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics2=cytoscape.visual.customgraphic.NullCustomGraphics
@@ -612,16 +612,16 @@ nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeFont=Default,plain,1
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeFontSize=12.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeHight=30.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabel=
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelColor=0,0,0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelOpacity=255
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelColor=51,51,51
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelOpacity=225.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelPosition=C,C,c,0.00,0.00
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelWidth=100.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLineStyle=SOLID
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLineWidth=1.0
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLineWidth=4.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeOpacity=255
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeShape=roundrect
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeShowNestedNetwork=true
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeSize=35.0
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeSize=65.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeToolTip=
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeWidth=70.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeFontSizeCalculator=PanGIA Overview Style-Node Font Size-Continuous Mapper
