--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -169,6 +169,12 @@
       <version>1.1</version>
     </dependency>
 
+	<dependency>
+    	<groupId>org.swinglabs</groupId>
+    	<artifactId>swing-layout</artifactId>
+    	<version>1.0.3</version>
+	</dependency>
+
     <dependency>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>plugin-api</artifactId>
