--- a/core3/manual-layout-impl/trunk/pom.xml
+++ b/core3/manual-layout-impl/trunk/pom.xml
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>viewmodel-api</artifactId>
-      <version>[3.0.0-alpha2,4.0.0)</version>
+      <version>3.0.0-alpha2</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
@@ -72,6 +72,11 @@
       <groupId>org.cytoscape</groupId>
       <artifactId>work-api</artifactId>
       <version>[3.0.0-alpha1,4.0.0)</version>
+    </dependency>    
+    <dependency>
+      <groupId>org.cytoscape</groupId>
+      <artifactId>swing-application-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
