--- a/core3/manual-layout-impl/trunk/pom.xml
+++ b/core3/manual-layout-impl/trunk/pom.xml
@@ -49,9 +49,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>cytoscape.corelibs</groupId>
-      <artifactId>nerius-math-xform</artifactId>
-      <version>2.8.0-beta2</version>
+      <groupId>org.cytoscape</groupId>
+      <artifactId>math-xform</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
