--- a/core3/equations-impl/trunk/pom.xml
+++ b/core3/equations-impl/trunk/pom.xml
@@ -150,7 +150,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>equations-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<version>3.0.0-alpha2</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
