Removed -SNAPSHOT from the version.
git-svn-id: http://chianti.ucsd.edu/svn@22787 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/equations-api/trunk/pom.xml
+++ b/core3/equations-api/trunk/pom.xml
@@ -15,7 +15,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>equations-api</artifactId>
-  <version>3.0.0-alpha2-SNAPSHOT</version>
+  <version>3.0.0-alpha2</version>
 
   <name>${bundle.symbolicName}</name>
 
