--- a/core3/equations-functions-impl/trunk/pom.xml
+++ b/core3/equations-functions-impl/trunk/pom.xml
@@ -17,7 +17,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>equations-functions-impl</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>3.0.0-alpha3</version>
 
 	<name>${bundle.symbolicName}</name>
 
