--- a/core3/equations-api/trunk/pom.xml
+++ b/core3/equations-api/trunk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>org.cytoscape</groupId>
-    <version>3.0.0-alpha2</version>
+    <version>3.0.0-alpha3</version>
   </parent>
 
   <properties>
@@ -15,7 +15,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>equations-api</artifactId>
-  <version>3.0.0-alpha2</version>
+  <version>1.0-SNAPSHOT</version>
 
   <name>${bundle.symbolicName}</name>
 
