--- a/core3/equations-functions-impl/trunk/pom.xml
+++ b/core3/equations-functions-impl/trunk/pom.xml
@@ -17,7 +17,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>equations-functions-impl</artifactId>
-	<version>3.0.0-alpha3</version>
+	<version>1.0-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName}</name>
 
@@ -150,13 +150,14 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>equations-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>equations-impl</artifactId>
-			<version>3.0.0-alpha3</version>
-		</dependency>
+			<version>1.0-SNAPSHOT</version>
+			<scope>test</scope>
+ 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
@@ -177,6 +178,12 @@
 			<groupId>org.ops4j.pax.logging</groupId>
 			<artifactId>pax-logging-api</artifactId>
 			<version>1.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
