--- a/cytoscape/trunk/corelibs/docs/pom.xml
+++ b/cytoscape/trunk/corelibs/docs/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>cytoscape.corelibs</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta3-SNAPSHOT</version>
+    <version>2.8.0-beta3</version>
   </parent>
     
   <artifactId>docs</artifactId>
