--- a/cytoscape/trunk/coreplugins/pom.xml
+++ b/cytoscape/trunk/coreplugins/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta3-SNAPSHOT</version>
+    <version>2.8.0-beta3</version>
   </parent>
 
   <groupId>cytoscape.coreplugins</groupId>
