--- a/cytoscape/trunk/webstart/pom.xml
+++ b/cytoscape/trunk/webstart/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>cytoscape</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta3-SNAPSHOT</version>
+    <version>2.8.0-beta3</version>
   </parent>
 
   <groupId>cytoscape</groupId>
