[maven-release-plugin] prepare for next development iteration
git-svn-id: http://chianti.ucsd.edu/svn@22816 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/coreplugins/cPath/pom.xml
+++ b/cytoscape/trunk/coreplugins/cPath/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.coreplugins</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta3</version>
+    <version>2.8.0-beta4-SNAPSHOT</version>
   </parent>
 
   <artifactId>cpath</artifactId>
