--- a/cytoscape/trunk/archetypes/sample-plugin/pom.xml
+++ b/cytoscape/trunk/archetypes/sample-plugin/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>cytoscape.archetypes</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta3</version>
+    <version>2.8.0-beta4-SNAPSHOT</version>
   </parent>
 
   <artifactId>sample-plugin</artifactId>
-  <version>2.8.0-beta3</version>
+  <version>2.8.0-beta4-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
   <name>Sample Plugin Archetype</name>
 
