--- a/cytoscape/trunk/corelibs/commons-cli-1.x-cytocape-custom/pom.xml
+++ b/cytoscape/trunk/corelibs/commons-cli-1.x-cytocape-custom/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.corelibs</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta3</version>
+    <version>2.8.0-beta4-SNAPSHOT</version>
   </parent>
 
   <artifactId>commons-cli-1-x-cytocape-custom</artifactId>
