tweaked release procedure yet again
git-svn-id: http://chianti.ucsd.edu/svn@22818 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -31,7 +31,7 @@
         <configuration>
           <tagBase>svn+ssh://grenache.ucsd.edu/cellar/common/svn/cytoscape/tags</tagBase>
           <autoVersionSubmodules>true</autoVersionSubmodules>
-          <goals>deploy install4j:compile</goals>
+          <goals>deploy</goals>
           <!-- we need this for corelibs/docs to be installed so that 
                application will build correctly -->
           <preparationGoals>clean install</preparationGoals>
