"Node," "Edge," and "Network" static Strings are removed.  To specify one of these types in your code, you need to use Class<?> of the data type (for example, CyNode.class).  VizMapGui is currently turned off until this refactoring is finished.
git-svn-id: http://chianti.ucsd.edu/svn@22824 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/presentation-api/trunk/pom.xml
+++ b/core3/presentation-api/trunk/pom.xml
@@ -90,7 +90,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
 
 		<!-- For Testing -->
