--- a/core3/ding-presentation-impl/trunk/pom.xml
+++ b/core3/ding-presentation-impl/trunk/pom.xml
@@ -186,7 +186,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-impl</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
