--- a/core3/graph-render/trunk/pom.xml
+++ b/core3/graph-render/trunk/pom.xml
@@ -102,7 +102,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
