--- a/core3/vizmap-api/trunk/pom.xml
+++ b/core3/vizmap-api/trunk/pom.xml
@@ -128,7 +128,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Testing -->
