--- a/core3/editor-impl/trunk/pom.xml
+++ b/core3/editor-impl/trunk/pom.xml
@@ -113,7 +113,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
