--- a/core3/layout-api/trunk/pom.xml
+++ b/core3/layout-api/trunk/pom.xml
@@ -80,7 +80,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>core-task-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
