added property-api, which was mysteriously absent
git-svn-id: http://chianti.ucsd.edu/svn@22846 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -183,6 +183,11 @@
 			<artifactId>presentation-api</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>property-api</artifactId>
+			<version>3.0.0-alpha1</version>
+		</dependency>
 
 
 		<!-- Cytoscape Implementation Bundles -->
