--- a/core3/swing-application-api/trunk/pom.xml
+++ b/core3/swing-application-api/trunk/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<bundle.symbolicName>org.cytoscape.swing-application-api</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape</bundle.namespace>
+		<bundle.namespace>org.cytoscape.application.swing</bundle.namespace>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
