--- a/core3/linkout-impl/trunk/pom.xml
+++ b/core3/linkout-impl/trunk/pom.xml
@@ -61,21 +61,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>swing-application-api</artifactId>
+			<artifactId>swing-util</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>service-util</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
-		</dependency>
-
-		<!-- This is necessary to validate Spring XML. -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
-			<version>${spring.version}</version>
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
