--- a/core3/swing-util/trunk/pom.xml
+++ b/core3/swing-util/trunk/pom.xml
@@ -109,6 +109,11 @@
             <version>4.4</version>
             <scope>test</scope>
         </dependency>
+     	<dependency>
+            <groupId>org.cytoscape</groupId>
+            <artifactId>property-api</artifactId>
+            <version>3.0.0-alpha1</version>
+        </dependency>
     </dependencies>
 
 </project>
