--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -62,7 +62,7 @@
 					<locale>en</locale>
 					<javadocVersion>1.6</javadocVersion>
 					<links>
-						<link>http://java.sun.com/javase/6/docs/api/</link>
+						<link>http://download.oracle.com/javase/6/docs/api/</link>
 						<link>http://cytoscape.wodaklab.org/javadoc/</link>
 					</links>
 					<footer>Cytoscape 3 Core API</footer>
