mistake in build file reference to plugin lib
git-svn-id: http://chianti.ucsd.edu/svn@22859 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/soc/chinmoy/phylotree/build.xml
+++ b/csplugins/trunk/soc/chinmoy/phylotree/build.xml
@@ -49,7 +49,7 @@
     <path id="project.class.path">
       <pathelement location="${cytoscape.dir}/cytoscape.jar"/>
       <pathelement path="${java.class.path}/"/>
-      <pathelement location="${cytoscape.lib.dir}/forester.jar"/>
+      <pathelement location="${lib.dir}/forester.jar"/>
     </path>
 
 	
