--- a/cytoscape/trunk/archetypes/sample-plugin/src/main/resources/archetype-resources/pom.xml
+++ b/cytoscape/trunk/archetypes/sample-plugin/src/main/resources/archetype-resources/pom.xml
@@ -12,6 +12,17 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+          <optimize>true</optimize>
+          <showWarnings>true</showWarnings>
+          <showDeprecation>true</showDeprecation>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
