git-svn-id: http://chianti.ucsd.edu/svn@22864 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/soc/sfederow/CyAnimator/src/CyAnimator/.classpath
+++ b/csplugins/trunk/soc/sfederow/CyAnimator/src/CyAnimator/.classpath
@@ -2,5 +2,93 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/activation.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/biojava-1.4.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/colt.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/coltginy.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/commons-cli-1.x-cytoscape-custom.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/com-nerius-math-xform.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/concurrent.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-cruft-obo.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-geom-rtree.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-geom-spacial.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-graph-dynamic.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-graph-fixed.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-render-export.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-render-immed.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-render-stateful.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-task.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/cytoscape-util-intr.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/ding.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/FastInfoset.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/fing.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-export-2.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-graphics2d-2.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-graphicsio-2.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-graphicsio-java-2.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-graphicsio-ps-2.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-graphicsio-svg-2.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-io-2.0.2.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-jas-plotter-2.2.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-swing-2.0.3.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-util-2.0.2.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/freehep-xml-2.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/giny.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/glf.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/http.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/i4jruntime.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/itext-2.0.4.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jaxb-api.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jaxb-impl.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jaxws-api.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jaxws-rt.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jaxws-tools.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jdom-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jhall.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jnlp.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jsr173_api.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jsr181-api.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/jsr250-api.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/junit.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/l2fprod-common-all.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/looks-2.1.4.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/mimepull.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/phoebe.dnd.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/piccolo.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/resolver.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/saaj-api.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/saaj-impl.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/sjsxp.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/stax-ex.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/streambuffer.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/swing-layout-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/swingx-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/swingx-beaninfo-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/tclib.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/undo.support.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/violinstrings-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/lib/woodstox.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/AdvancedNetworkMerge.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/AutomaticLayout.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/biomartClient.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/biopax.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/browser.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/cpath2.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/cPath.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/CyAnimator.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/CytoscapeEditor.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/filter.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/filters.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/helloworld.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/linkout.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/man.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/ManualLayout.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/ncbiClient.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/psi_mi.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/quick_find.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/SBMLReader.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/TableImport.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/plugins/yLayouts.jar"/>
+	<classpathentry kind="lib" path="/home/sfederow/Cytoscape_v2.7.0/cytoscape.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
