--- a/core3/ding-presentation-impl/trunk/pom.xml
+++ b/core3/ding-presentation-impl/trunk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha4-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -144,8 +144,8 @@
 
 		<!-- Wrapped libraries -->
 		<dependency>
-			<groupId>org.cytoscape.wrappers</groupId>
-			<artifactId>com.l2fprod.common.sheet</artifactId>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>l2fprod-common-sheet</artifactId>
 			<version>7.3</version>
 		</dependency>
 		<dependency>
@@ -154,13 +154,13 @@
 			<version>0.9.7</version>
 		</dependency>
 		<dependency>
-			<groupId>org.cytoscape.wrappers</groupId>
-			<artifactId>com.l2fprod.common.shared</artifactId>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>l2fprod-common-shared</artifactId>
 			<version>7.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.cytoscape.wrappers</groupId>
-			<artifactId>com.l2fprod.common.fontchooser</artifactId>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>l2fprod-common-fontchooser</artifactId>
 			<version>7.3</version>
 		</dependency>
 		<dependency>
