--- a/core3/vizmap-gui-impl/trunk/pom.xml
+++ b/core3/vizmap-gui-impl/trunk/pom.xml
@@ -86,18 +86,18 @@
 
 		<!-- Wrapped 3rd party libraries -->
 		<dependency>
-			<groupId>org.cytoscape.wrappers</groupId>
-			<artifactId>com.l2fprod.common.sheet</artifactId>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>l2fprod-common-sheet</artifactId>
 			<version>7.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.cytoscape.wrappers</groupId>
-			<artifactId>com.l2fprod.common.shared</artifactId>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>l2fprod-common-shared</artifactId>
 			<version>7.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.cytoscape.wrappers</groupId>
-			<artifactId>com.l2fprod.common.fontchooser</artifactId>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>l2fprod-common-fontchooser</artifactId>
 			<version>7.3</version>
 		</dependency>
 
