--- a/core3/graph-render/trunk/pom.xml
+++ b/core3/graph-render/trunk/pom.xml
@@ -101,6 +101,11 @@
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
+      <artifactId>util-intr</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
       <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
