--- a/core3/graph-render/trunk/pom.xml
+++ b/core3/graph-render/trunk/pom.xml
@@ -114,6 +114,12 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math</artifactId>
+      <version>2.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
