--- a/csplugins/trunk/ucsd/mes/genomespace-plugin/pom.xml
+++ b/csplugins/trunk/ucsd/mes/genomespace-plugin/pom.xml
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>2.8.0-beta3</version>
+      <version>2.8.0-beta4-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
