--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -117,11 +117,51 @@
       <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
     
+    <!-- 
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
       <version>3.0.2</version>
     </dependency>    
+ 	-->
+    
+      <!-- dependencies needed for plugin manager -->
+    <dependency>
+    	<groupId>org.cytoscape.wrappers</groupId>
+		<artifactId>org.apache.lucene</artifactId>
+		<version>3.0.2</version>
+    </dependency>
+
+	<dependency>
+	    <groupId>org.jdom</groupId>
+	    <artifactId>com.springsource.org.jdom</artifactId>
+	    <version>1.1.0</version>
+	</dependency>
+
+    <dependency>
+    	<groupId>org.cytoscape.wrappers</groupId>
+		<artifactId>org.swinglabs.swing-layout</artifactId>
+		<version>1.0.3</version>
+    </dependency>
+
+    <dependency>
+    	<groupId>org.cytoscape.wrappers</groupId>
+		<artifactId>org.swinglabs.swingx</artifactId>
+		<version>1.6.1</version> 
+    </dependency>
+
+	<dependency>
+    	<groupId>org.cytoscape</groupId>
+    	<artifactId>swing-application-api</artifactId>
+    	<version>1.0-SNAPSHOT</version>
+	</dependency>
+
+	<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>work-swing-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+	</dependency>
+    
 
     <dependency>
 		<groupId>org.cytoscape</groupId>
@@ -142,6 +182,8 @@
 		<version>1.8.1</version>
 		<scope>test</scope>
 	</dependency>
+	
   </dependencies>
+
 
 </project>
