--- a/core3/vizmap-gui-api/trunk/pom.xml
+++ b/core3/vizmap-gui-api/trunk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha4-SNAPSHOT</version>
 	</parent>
 
 	<properties>
