--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -106,6 +106,19 @@
           <name>Cytoscape Releases</name>
           <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
        </repository>
+       
+       <repository>
+    	<id>com.springsource.repository.bundles.release</id>
+    	<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
+    	<url>http://repository.springsource.com/maven/bundles/release</url>
+	   </repository>
+
+	  <repository>
+    	<id>com.springsource.repository.bundles.external</id>
+    	<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
+    	<url>http://repository.springsource.com/maven/bundles/external</url>
+	  </repository>
+       
   </repositories>
 
   <dependencies>
