--- a/core3/integration-test-support/trunk/pom.xml
+++ b/core3/integration-test-support/trunk/pom.xml
@@ -1,93 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<parent>
-		<artifactId>parent</artifactId>
-		<groupId>org.cytoscape</groupId>
-		<version>3.0.0-alpha3</version>
-	</parent>
+  <parent>
+    <artifactId>parent</artifactId>
+    <groupId>org.cytoscape</groupId>
+    <version>3.0.0-alpha4-SNAPSHOT</version>
+  </parent>
 
-	<properties>
-		<bundle.symbolicName>org.cytoscape.integration-test-support</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape.integration</bundle.namespace>
-	</properties>
+  <properties>
+    <bundle.symbolicName>org.cytoscape.integration-test-support</bundle.symbolicName>
+    <bundle.namespace>org.cytoscape.integration</bundle.namespace>
+  </properties>
 
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.cytoscape</groupId>
-	<artifactId>integration-test-support</artifactId>
-	<version>3.0.0-alpha3-SNAPSHOT</version>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.cytoscape</groupId>
+  <artifactId>integration-test-support</artifactId>
+  <version>3.0.0-alpha3-SNAPSHOT</version>
 
-	<name>${bundle.symbolicName}</name>
+  <name>${bundle.symbolicName}</name>
 
-	<packaging>bundle</packaging>
+  <packaging>bundle</packaging>
 
-	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/integration-test-support/trunk</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/integration-test-support/trunk</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/integration-test-support/trunk</url>
-	</scm>
-
-	<repositories>
-		<repository>
-			<id>cytoscape_snapshots</id>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<name>Cytoscape Snapshots</name>
-			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
-		</repository>
-		<repository>
-			<id>cytoscape_releases</id>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<name>Cytoscape Releases</name>
-			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
-		</repository>
-		<repository>
-			<id>spring-osgi</id>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<name>Cytoscape Spring OSGi Release Mirror</name>
-			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/spring-osgi/</url>
-		</repository>
-		<repository>
-			<id>spring-osgi-snapshots</id>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<name>Cytoscape Spring OSGi Snapshot Mirror</name>
-			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/spring-osgi-snapshots/</url>
-		</repository>
-	</repositories>
+  <scm>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/integration-test-support/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/integration-test-support/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/integration-test-support/trunk</url>
+  </scm>
 
   <build>
     <plugins>
-      <plugin>
-        <inherited>false</inherited>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.0</version>
-        <configuration>
-          <autoVersionSubmodules>true</autoVersionSubmodules>
-          <goals>deploy</goals>
-          <!-- special for this one because of the log4j.osgi dependency -->
-          <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
@@ -109,46 +50,26 @@
     </plugins>
   </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.osgi</groupId>
-			<artifactId>spring-osgi-test</artifactId>
-			<version>${spring.osgi.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.osgi</groupId>
-			<artifactId>spring-osgi-annotation</artifactId>
-			<version>${spring.osgi.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.osgi</groupId>
-			<artifactId>spring-osgi-extender</artifactId>
-			<version>${spring.osgi.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.osgi</groupId>
-			<artifactId>log4j.osgi</artifactId>
-			<version>1.2.15-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>com.springsource.slf4j.api</artifactId>
-			<version>1.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>com.springsource.slf4j.log4j</artifactId>
-			<version>1.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>com.springsource.slf4j.org.apache.commons.logging</artifactId>
-			<version>1.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.sonatype.tycho</groupId>
-			<artifactId>org.eclipse.osgi</artifactId>
-			<version>3.6.0.v20100517</version>
-		</dependency>
-	</dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>org.ops4j.pax.exam</groupId>
+      <artifactId>pax-exam</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ops4j.pax.exam</groupId>
+      <artifactId>pax-exam-junit</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ops4j.pax.exam</groupId>
+      <artifactId>pax-exam-container-default</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+    </dependency>
+  </dependencies>
 </project>
